Expand documentation with architecture and guides
Update README.md into a comprehensive showcase covering system
architecture, business logic metaphors, quick-start guides, and step-by-
step cURL verification recipes. Add deep-dive technical guides in docs/
for architecture and zero-trust security modeling, and include Apache
2.0 license.